force-app/main/default/objects/Victims_Served_Report__c/Victims_Served_Report__c.object-meta.xml
<CustomObject>
    <label>Victims Served Report</label>
    <nameField>
        <displayFormat>VS-{00000}</displayFormat>
        <label>Victims Served Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Victims Served Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>