force-app/main/default/objects/Victims_Served_Report__c/fields/A1_Provide_Criminal_Justice_System_Info__c.field-meta.xml
<CustomField>
    <fullName>A1_Provide_Criminal_Justice_System_Info__c</fullName>
    <label>A1. Provide Criminal Justice System Info</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>