force-app/main/default/objects/Victims_Served_Report__c/fields/A2_Information_About_Victim_Rights__c.field-meta.xml
<CustomField>
    <fullName>A2_Information_About_Victim_Rights__c</fullName>
    <label>A2. Information About Victim Rights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>