force-app/main/default/objects/Victims_Served_Report__c/fields/A3_Referral_to_Other_Victim_Programs__c.field-meta.xml
<CustomField>
    <fullName>A3_Referral_to_Other_Victim_Programs__c</fullName>
    <label>A3. Referral to Other Victim Programs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>