force-app/main/default/objects/Victims_Served_Report__c/fields/A4_Referral_to_Other_Services__c.field-meta.xml
<CustomField>
    <fullName>A4_Referral_to_Other_Services__c</fullName>
    <label>A4. Referral to Other Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>