force-app/main/default/objects/Victims_Served_Report__c/fields/A_Information_Referral__c.field-meta.xml
<CustomField>
    <fullName>A_Information_Referral__c</fullName>
    <formula
  >A1_Provide_Criminal_Justice_System_Info__c + A2_Information_About_Victim_Rights__c +  A3_Referral_to_Other_Victim_Programs__c +  A4_Referral_to_Other_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A. Information &amp; Referral</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>