force-app/main/default/objects/Victims_Served_Report__c/fields/Adult_Physical_Assault__c.field-meta.xml
<CustomField>
    <fullName>Adult_Physical_Assault__c</fullName>
    <label>Adult Physical Assault</label>
    <length>3</length>
    <type>Text</type>
</CustomField>