force-app/main/default/objects/Victims_Served_Report__c/fields/Adult_Sexual_Assault__c.field-meta.xml
<CustomField>
    <fullName>Adult_Sexual_Assault__c</fullName>
    <label>Adult Sexual Assault</label>
    <length>3</length>
    <type>Text</type>
</CustomField>