force-app/main/default/objects/Victims_Served_Report__c/fields/Adults_Sexually_Abused__c.field-meta.xml
<CustomField>
    <fullName>Adults_Sexually_Abused__c</fullName>
    <label>Adults Sexually Abused</label>
    <length>3</length>
    <type>Text</type>
</CustomField>