force-app/main/default/objects/Victims_Served_Report__c/fields/Age_0_12__c.field-meta.xml
<CustomField>
    <fullName>Age_0_12__c</fullName>
    <label>Age 0-12</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>