force-app/main/default/objects/Victims_Served_Report__c/fields/Age_13_17__c.field-meta.xml
<CustomField>
    <fullName>Age_13_17__c</fullName>
    <label>Age 13-17</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>