force-app/main/default/objects/Victims_Served_Report__c/fields/Age_18_24__c.field-meta.xml
<CustomField>
    <fullName>Age_18_24__c</fullName>
    <label>Age 18-24</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>