force-app/main/default/objects/Victims_Served_Report__c/fields/Age_60_and_Older__c.field-meta.xml
<CustomField>
    <fullName>Age_60_and_Older__c</fullName>
    <label>Age 60 and Older</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>