force-app/main/default/objects/Victims_Served_Report__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0–12</fullName>
            </value>
            <value>
                <fullName>13–17</fullName>
            </value>
            <value>
                <fullName>18–24</fullName>
            </value>
            <value>
                <fullName>25–59</fullName>
            </value>
            <value>
                <fullName>60 and Older</fullName>
            </value>
            <value>
                <fullName>Not Reported</fullName>
            </value>
            <value>
                <fullName>Not Tracked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>