force-app/main/default/objects/Victims_Served_Report__c/fields/Age_Not_Reported__c.field-meta.xml
<CustomField>
    <fullName>Age_Not_Reported__c</fullName>
    <label>Age Not Reported</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>