force-app/main/default/objects/Victims_Served_Report__c/fields/Age_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Age_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age Tracked</label>
    <type>Checkbox</type>
</CustomField>