force-app/main/default/objects/Victims_Served_Report__c/fields/American_Indian_Alaska_Native__c.field-meta.xml
<CustomField>
    <fullName>American_Indian_Alaska_Native__c</fullName>
    <label>American Indian/Alaska Native</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>