force-app/main/default/objects/Victims_Served_Report__c/fields/Arson__c.field-meta.xml
<CustomField>
    <fullName>Arson__c</fullName>
    <label>Arson</label>
    <length>3</length>
    <type>Text</type>
</CustomField>