force-app/main/default/objects/Victims_Served_Report__c/fields/Asian__c.field-meta.xml
<CustomField>
    <fullName>Asian__c</fullName>
    <label>Asian</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>