force-app/main/default/objects/Victims_Served_Report__c/fields/B10_Interpreter_Services__c.field-meta.xml
<CustomField>
    <fullName>B10_Interpreter_Services__c</fullName>
    <label>B10. Interpreter Services </label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>