force-app/main/default/objects/Victims_Served_Report__c/fields/B1_Advocacy_to_Emergency_Medical_Care__c.field-meta.xml
<CustomField>
    <fullName>B1_Advocacy_to_Emergency_Medical_Care__c</fullName>
    <label>B1. Advocacy to Emergency Medical Care</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>