force-app/main/default/objects/Victims_Served_Report__c/fields/B2_Advocacy_to_Medical_Forensic_Exam__c.field-meta.xml
<CustomField>
    <fullName>B2_Advocacy_to_Medical_Forensic_Exam__c</fullName>
    <label>B2. Advocacy to Medical Forensic Exam</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>