force-app/main/default/objects/Victims_Served_Report__c/fields/B3_Law_Enforcement_Interview_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>B3_Law_Enforcement_Interview_Advocacy__c</fullName>
    <label>B3. Law Enforcement Interview Advocacy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>