force-app/main/default/objects/Victims_Served_Report__c/fields/B4_Individual_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>B4_Individual_Advocacy__c</fullName>
    <label>B4. Individual Advocacy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>