force-app/main/default/objects/Victims_Served_Report__c/fields/B5_Performance_of_Medical_Forensic_Exam__c.field-meta.xml
<CustomField>
    <fullName>B5_Performance_of_Medical_Forensic_Exam__c</fullName>
    <label>B5. Performance of Medical Forensic Exam</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>