force-app/main/default/objects/Victims_Served_Report__c/fields/B6_Immigration_Assistance__c.field-meta.xml
<CustomField>
    <fullName>B6_Immigration_Assistance__c</fullName>
    <label>B6. Immigration Assistance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>