force-app/main/default/objects/Victims_Served_Report__c/fields/B7_Intervention_with_Employer_or_Other__c.field-meta.xml
<CustomField>
    <fullName>B7_Intervention_with_Employer_or_Other__c</fullName>
    <label>B7. Intervention with Employer or Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>