force-app/main/default/objects/Victims_Served_Report__c/fields/B8_Child_or_Dependent_Care_Assistance__c.field-meta.xml
<CustomField>
    <fullName>B8_Child_or_Dependent_Care_Assistance__c</fullName>
    <label>B8. Child or Dependent Care Assistance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>