force-app/main/default/objects/Victims_Served_Report__c/fields/B9_Transportation_Assistance__c.field-meta.xml
<CustomField>
    <fullName>B9_Transportation_Assistance__c</fullName>
    <label>B9. Transportation Assistance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>