force-app/main/default/objects/Victims_Served_Report__c/fields/Black_African_American__c.field-meta.xml
<CustomField>
    <fullName>Black_African_American__c</fullName>
    <label>Black/African American</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>