force-app/main/default/objects/Victims_Served_Report__c/fields/Bullying__c.field-meta.xml
<CustomField>
    <fullName>Bullying__c</fullName>
    <label>Bullying</label>
    <length>3</length>
    <type>Text</type>
</CustomField>