force-app/main/default/objects/Victims_Served_Report__c/fields/Burglary__c.field-meta.xml
<CustomField>
    <fullName>Burglary__c</fullName>
    <label>Burglary</label>
    <length>3</length>
    <type>Text</type>
</CustomField>