force-app/main/default/objects/Victims_Served_Report__c/fields/C1_Crisis_Intervention__c.field-meta.xml
<CustomField>
    <fullName>C1_Crisis_Intervention__c</fullName>
    <label>C1. Crisis Intervention</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>