force-app/main/default/objects/Victims_Served_Report__c/fields/C2_HotlineCrisis_Line_counseling__c.field-meta.xml
<CustomField>
    <fullName>C2_HotlineCrisis_Line_counseling__c</fullName>
    <label>C2. Hotline/Crisis Line counseling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>