force-app/main/default/objects/Victims_Served_Report__c/fields/C3_On_Scene_Crisis_Response__c.field-meta.xml
<CustomField>
    <fullName>C3_On_Scene_Crisis_Response__c</fullName>
    <label>C3. On-Scene Crisis Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>