force-app/main/default/objects/Victims_Served_Report__c/fields/C4_Individual_Counseling__c.field-meta.xml
<CustomField>
    <fullName>C4_Individual_Counseling__c</fullName>
    <label>C4. Individual Counseling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>