force-app/main/default/objects/Victims_Served_Report__c/fields/C5_Support_Groups__c.field-meta.xml
<CustomField>
    <fullName>C5_Support_Groups__c</fullName>
    <label>C5. Support Groups</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>