force-app/main/default/objects/Victims_Served_Report__c/fields/C6_Other_Therapy__c.field-meta.xml
<CustomField>
    <fullName>C6_Other_Therapy__c</fullName>
    <label>C6. Other Therapy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>