force-app/main/default/objects/Victims_Served_Report__c/fields/C7_Emergency_Financial_Assistance__c.field-meta.xml
<CustomField>
    <fullName>C7_Emergency_Financial_Assistance__c</fullName>
    <label>C7. Emergency Financial Assistance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>