force-app/main/default/objects/Victims_Served_Report__c/fields/C_Emotional_Support_or_Safety_Services__c.field-meta.xml
<CustomField>
    <fullName>C_Emotional_Support_or_Safety_Services__c</fullName>
    <formula
  >C1_Crisis_Intervention__c +  C2_HotlineCrisis_Line_counseling__c +  C3_On_Scene_Crisis_Response__c +  C4_Individual_Counseling__c +  C5_Support_Groups__c +  C6_Other_Therapy__c +  C7_Emergency_Financial_Assistance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C. Emotional Support or Safety Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>