force-app/main/default/objects/Victims_Served_Report__c/fields/Challenges_During_COVID__c.field-meta.xml
<CustomField>
    <fullName>Challenges_During_COVID__c</fullName>
    <label>Challenges During COVID</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>