force-app/main/default/objects/Victims_Served_Report__c/fields/Challenges_or_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Challenges_or_Barriers__c</fullName>
    <label>Challenges or Barriers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>