force-app/main/default/objects/Victims_Served_Report__c/fields/Changes_in_Community__c.field-meta.xml
<CustomField>
    <fullName>Changes_in_Community__c</fullName>
    <label>Changes in Community</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>