force-app/main/default/objects/Victims_Served_Report__c/fields/Child_Physical_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Child_Physical_Abuse__c</fullName>
    <label>Child Physical Abuse</label>
    <length>3</length>
    <type>Text</type>
</CustomField>