force-app/main/default/objects/Victims_Served_Report__c/fields/Child_Pornography__c.field-meta.xml
<CustomField>
    <fullName>Child_Pornography__c</fullName>
    <label>Child Pornography</label>
    <length>3</length>
    <type>Text</type>
</CustomField>