force-app/main/default/objects/Victims_Served_Report__c/fields/Client_Returned_Survey__c.field-meta.xml
<CustomField>
    <fullName>Client_Returned_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Returned Survey</label>
    <type>Checkbox</type>
</CustomField>