force-app/main/default/objects/Victims_Served_Report__c/fields/Clients_Surveyed_for_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Clients_Surveyed_for_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clients Surveyed for Feedback</label>
    <type>Checkbox</type>
</CustomField>