force-app/main/default/objects/Victims_Served_Report__c/fields/D1_Emergency_Shelter_or_Safe_House__c.field-meta.xml
<CustomField>
    <fullName>D1_Emergency_Shelter_or_Safe_House__c</fullName>
    <label>D1. Emergency Shelter or Safe House</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>