force-app/main/default/objects/Victims_Served_Report__c/fields/D2_Transitional_Housing__c.field-meta.xml
<CustomField>
    <fullName>D2_Transitional_Housing__c</fullName>
    <label>D2. Transitional Housing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>