force-app/main/default/objects/Victims_Served_Report__c/fields/D3_Relocation_Assistance__c.field-meta.xml
<CustomField>
    <fullName>D3_Relocation_Assistance__c</fullName>
    <label>D3. Relocation Assistance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>