force-app/main/default/objects/Victims_Served_Report__c/fields/D_Shelter_Housing_Services__c.field-meta.xml
<CustomField>
    <fullName>D_Shelter_Housing_Services__c</fullName>
    <formula
  >D1_Emergency_Shelter_or_Safe_House__c +  D2_Transitional_Housing__c +  D3_Relocation_Assistance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D. Shelter/Housing Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>