force-app/main/default/objects/Victims_Served_Report__c/fields/Deaf_Hard_of_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Deaf_Hard_of_Hearing__c</fullName>
    <label>Deaf/Hard-of-Hearing</label>
    <length>3</length>
    <type>Text</type>
</CustomField>