force-app/main/default/objects/Victims_Served_Report__c/fields/Domestic_Violence__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Violence__c</fullName>
    <label>Domestic Violence</label>
    <length>3</length>
    <type>Text</type>
</CustomField>