force-app/main/default/objects/Victims_Served_Report__c/fields/DUI_DWI__c.field-meta.xml
<CustomField>
    <fullName>DUI_DWI__c</fullName>
    <label>DUI/DWI</label>
    <length>3</length>
    <type>Text</type>
</CustomField>