force-app/main/default/objects/Victims_Served_Report__c/fields/E10_Criminal_Advocacy_or_Accompaniment__c.field-meta.xml
<CustomField>
    <fullName>E10_Criminal_Advocacy_or_Accompaniment__c</fullName>
    <label>E10. Criminal Advocacy or Accompaniment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>