force-app/main/default/objects/Victims_Served_Report__c/fields/E11_Other_Legal_Advice__c.field-meta.xml
<CustomField>
    <fullName>E11_Other_Legal_Advice__c</fullName>
    <label>E11. Other Legal Advice</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>