force-app/main/default/objects/Victims_Served_Report__c/fields/E1_Notified_of_Criminal_Justice_Events__c.field-meta.xml
<CustomField>
    <fullName>E1_Notified_of_Criminal_Justice_Events__c</fullName>
    <label>E1. Notified of Criminal Justice Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>