force-app/main/default/objects/Victims_Served_Report__c/fields/E2_Victim_Impact_Statement_Assistance__c.field-meta.xml
<CustomField>
    <fullName>E2_Victim_Impact_Statement_Assistance__c</fullName>
    <label>E2. Victim Impact Statement Assistance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>