force-app/main/default/objects/Victims_Served_Report__c/fields/E3_Assistance_with_Restitution__c.field-meta.xml
<CustomField>
    <fullName>E3_Assistance_with_Restitution__c</fullName>
    <label>E3. Assistance with Restitution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>