force-app/main/default/objects/Victims_Served_Report__c/fields/E4_Legal_Assist_with_Restraining_Order__c.field-meta.xml
<CustomField>
    <fullName>E4_Legal_Assist_with_Restraining_Order__c</fullName>
    <label>E4. Legal Assist with Restraining Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>