force-app/main/default/objects/Victims_Served_Report__c/fields/E5_Legal_Assist_with_Family_Law__c.field-meta.xml
<CustomField>
    <fullName>E5_Legal_Assist_with_Family_Law__c</fullName>
    <label>E5. Legal Assist with Family Law</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>