force-app/main/default/objects/Victims_Served_Report__c/fields/E6_Emergency_Justice_Related_Assist__c.field-meta.xml
<CustomField>
    <fullName>E6_Emergency_Justice_Related_Assist__c</fullName>
    <label>E6.  Emergency Justice-Related Assist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>