force-app/main/default/objects/Victims_Served_Report__c/fields/E7_Immigration_Assistance__c.field-meta.xml
<CustomField>
    <fullName>E7_Immigration_Assistance__c</fullName>
    <label>E7. Immigration Assistance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>