force-app/main/default/objects/Victims_Served_Report__c/fields/E8_Prosecution_Interview_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>E8_Prosecution_Interview_Advocacy__c</fullName>
    <label>E8. Prosecution Interview Advocacy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>