force-app/main/default/objects/Victims_Served_Report__c/fields/E9_Law_Enforcement_Interview__c.field-meta.xml
<CustomField>
    <fullName>E9_Law_Enforcement_Interview__c</fullName>
    <label>E9. Law Enforcement Interview</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>