force-app/main/default/objects/Victims_Served_Report__c/fields/Elder_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Elder_Abuse__c</fullName>
    <label>Elder Abuse</label>
    <length>3</length>
    <type>Text</type>
</CustomField>