force-app/main/default/objects/Victims_Served_Report__c/fields/Emotional_Support_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Emotional_Support_Services_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emotional Support Services Provided</label>
    <type>Checkbox</type>
</CustomField>