force-app/main/default/objects/Victims_Served_Report__c/fields/Fiscally_on_Track__c.field-meta.xml
<CustomField>
    <fullName>Fiscally_on_Track__c</fullName>
    <label>Fiscally on Track</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>