force-app/main/default/objects/Victims_Served_Report__c/fields/Gender_Not_Reported__c.field-meta.xml
<CustomField>
    <fullName>Gender_Not_Reported__c</fullName>
    <label>Gender Not Reported</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>