force-app/main/default/objects/Victims_Served_Report__c/fields/Gender_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Gender_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gender Tracked</label>
    <type>Checkbox</type>
</CustomField>