force-app/main/default/objects/Victims_Served_Report__c/fields/Hate_Crime__c.field-meta.xml
<CustomField>
    <fullName>Hate_Crime__c</fullName>
    <label>Hate Crime</label>
    <length>3</length>
    <type>Text</type>
</CustomField>