force-app/main/default/objects/Victims_Served_Report__c/fields/Hate_Crime_Details__c.field-meta.xml
<CustomField>
    <fullName>Hate_Crime_Details__c</fullName>
    <label>Hate Crime Details</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>