force-app/main/default/objects/Victims_Served_Report__c/fields/Hate_Crime_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Hate_Crime_Explanation__c</fullName>
    <label>Hate Crime Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>