force-app/main/default/objects/Victims_Served_Report__c/fields/Hispanic_or_Latino__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_or_Latino__c</fullName>
    <label>Hispanic or Latino</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>