force-app/main/default/objects/Victims_Served_Report__c/fields/Homeless__c.field-meta.xml
<CustomField>
    <fullName>Homeless__c</fullName>
    <label>Homeless</label>
    <length>3</length>
    <type>Text</type>
</CustomField>