force-app/main/default/objects/Victims_Served_Report__c/fields/Human_Trafficking_Labor__c.field-meta.xml
<CustomField>
    <fullName>Human_Trafficking_Labor__c</fullName>
    <label>Human Trafficking: Labor</label>
    <length>3</length>
    <type>Text</type>
</CustomField>