force-app/main/default/objects/Victims_Served_Report__c/fields/Human_Trafficking_Sex__c.field-meta.xml
<CustomField>
    <fullName>Human_Trafficking_Sex__c</fullName>
    <label>Human Trafficking: Sex</label>
    <length>3</length>
    <type>Text</type>
</CustomField>