force-app/main/default/objects/Victims_Served_Report__c/fields/Identity_Theft__c.field-meta.xml
<CustomField>
    <fullName>Identity_Theft__c</fullName>
    <label>Identity Theft</label>
    <length>3</length>
    <type>Text</type>
</CustomField>