force-app/main/default/objects/Victims_Served_Report__c/fields/Immigrants_Refugees_Asylum_Seekers__c.field-meta.xml
<CustomField>
    <fullName>Immigrants_Refugees_Asylum_Seekers__c</fullName>
    <label>Immigrants/Refugees/Asylum Seekers</label>
    <length>3</length>
    <type>Text</type>
</CustomField>