force-app/main/default/objects/Victims_Served_Report__c/fields/Info_and_Referral_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Info_and_Referral_Services_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info and Referral Services Provided</label>
    <type>Checkbox</type>
</CustomField>