force-app/main/default/objects/Victims_Served_Report__c/fields/Issues_Out_of_Scope__c.field-meta.xml
<CustomField>
    <fullName>Issues_Out_of_Scope__c</fullName>
    <label>Issues Out of Scope</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>