force-app/main/default/objects/Victims_Served_Report__c/fields/Justice_System_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Justice_System_Services_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Justice System Services Provided</label>
    <type>Checkbox</type>
</CustomField>