force-app/main/default/objects/Victims_Served_Report__c/fields/Kidnapping_Custodial__c.field-meta.xml
<CustomField>
    <fullName>Kidnapping_Custodial__c</fullName>
    <label>Kidnapping (Custodial)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>