force-app/main/default/objects/Victims_Served_Report__c/fields/Kidnapping_Non_custodial__c.field-meta.xml
<CustomField>
    <fullName>Kidnapping_Non_custodial__c</fullName>
    <label>Kidnapping (Non-custodial)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>