force-app/main/default/objects/Victims_Served_Report__c/fields/LGBTQ__c.field-meta.xml
<CustomField>
    <fullName>LGBTQ__c</fullName>
    <label>LGBTQ</label>
    <length>3</length>
    <type>Text</type>
</CustomField>