force-app/main/default/objects/Victims_Served_Report__c/fields/Male__c.field-meta.xml
<CustomField>
    <fullName>Male__c</fullName>
    <label>Male</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>