force-app/main/default/objects/Victims_Served_Report__c/fields/Mass_Violence__c.field-meta.xml
<CustomField>
    <fullName>Mass_Violence__c</fullName>
    <label>Mass Violence</label>
    <length>3</length>
    <type>Text</type>
</CustomField>