force-app/main/default/objects/Victims_Served_Report__c/fields/Multiple_Races__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Races__c</fullName>
    <label>Multiple Races</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>