force-app/main/default/objects/Victims_Served_Report__c/fields/Native_Hawaiian_and_Other_Pacific_Island__c.field-meta.xml
<CustomField>
    <fullName>Native_Hawaiian_and_Other_Pacific_Island__c</fullName>
    <label>Native Hawaiian and Other Pacific Island</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>