force-app/main/default/objects/Victims_Served_Report__c/fields/Notes_from_National__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_National__c</fullName>
    <label>Notes from National</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>