force-app/main/default/objects/Victims_Served_Report__c/fields/Number_of_Individuals_Received_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Individuals_Received_Services__c</fullName>
    <label>Number of Individuals Received Services</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>