force-app/main/default/objects/Victims_Served_Report__c/fields/Number_of_New_Individuals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_New_Individuals__c</fullName>
    <label>Number of New Individuals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>