force-app/main/default/objects/Victims_Served_Report__c/fields/Number_Received_Housing_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_Received_Housing_Services__c</fullName>
    <label>Number Received Housing Services</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>