force-app/main/default/objects/Victims_Served_Report__c/fields/Number_w_Multiple_Type_of_Victimization__c.field-meta.xml
<CustomField>
    <fullName>Number_w_Multiple_Type_of_Victimization__c</fullName>
    <label>Number w/ Multiple Type of Victimization</label>
    <length>3</length>
    <type>Text</type>
</CustomField>